@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage4_target.py,v 1.5 2005/04/22 18:33:06 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage4_target.py,v 1.6 2005/04/27 17:59:35 rocket Exp $
 
 """
 Builder class for LiveCD stage1.
@@ -27,8 +27,7 @@ class stage4_target(generic_stage_target):
 					"bind","chroot_setup","setup_environment","build_packages",\
 					"build_kernel","bootloader","root_overlay","fsscript",
 					"preclean","rcupdate","unmerge","unbind","remove","empty",\
-					"clean","capture", "livecd_update","target_setup","create_iso",\
-					"clear_autoresume"]
+					"clean","capture", "clear_autoresume"]
 
 def register(foo):
 	foo.update({"stage4":stage4_target})
